--- a/style.css
+++ b/style.css
@@ -1152,6 +1152,11 @@
          margin-left: 30px;
      }
 
+     #icon_social, #icon_social2{
+            font-size: 18px;
+            padding-top: 20px;
+            padding-right: 10px;
+     }
 
      /* smoothies */
 
@@ -1295,9 +1300,10 @@
 
      }
 
-     #Cart {
-         margin-left: 15px;
-     }
+     #cart_button button {
+        margin-left: 15px;
+    }
+
 
  }
 
@@ -1402,7 +1408,7 @@
 
      }
 
-     #Cart {
+     #cart_button button {
          margin-left: 15px;
      }
 
